<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/ic_apps"
            android:title="@string/menu_apps" />

        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_games"
            android:title="@string/menu_games"/>


        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_fav"/>


        <item
            android:visible="false"
            android:id="@+id/nav_tele_apps"
            android:icon="@drawable/ic_telegeram_apps"
            android:title="@string/menu_tele_apps" />



        <item
            android:id="@+id/nav_google_play_top"
            android:icon="@drawable/google_play"
            android:title="@string/menu_google_play_tops" />

    </group>

    <group android:id="@+id/group_two">


        <item
            android:visible="false"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_"
            android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />

    </group>

</menu>
